<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Main Actions">
        <menu>
            <item android:title="@string/dashboard"
                android:icon="@drawable/ic_baseline_dashboard_24"/>
            <item android:title="@string/meals"
                android:icon="@drawable/ic_baseline_food_bank_24"/>
            <item android:title="@string/gym"
                android:icon="@drawable/ic_baseline_fitness_center_24"/>
            <item android:title="@string/mind"
                android:icon="@drawable/ic_baseline_self_improvement_24"/>
            <item android:title="@string/settings"
                android:icon="@drawable/ic_baseline_settings_24"/>
            <item android:title="@string/logout"
                android:icon="@drawable/ic_baseline_exit_to_app_24"/>
        </menu>
    </item>

</menu>